<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipeSearch"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/item_add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_addRecipe"
        app:showAsAction="always" />

    <item
        android:id="@+id/theme_choose"
        android:icon="@drawable/ic_theme"
        android:title="@string/choose_theme" />

    <item
        android:id="@+id/favourite_list"
        android:icon="@drawable/ic_favourite_list"
        android:title="@string/favourite_list" />
</menu>